[tool.poetry]
name = "cipher_kpf2114"
version = "0.1.0"
description = "The Caesar cipher will encrypt and decrypt your strings!"
authors = ["Kevin Frazier"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
